# ARCOS_PROJECT1

./: CMakeLists.txt  Readme.md  file1-aos.cpp  image-aos.cpp  image-soa.cpp  image.h  main.cpp  parser.cpp
Google_tests/: CMakeLists.txt  ConverterTests.cpp  Main.cpp  MainAOS.cpp  MainSOA.cpp
aos/: BmpAOS.cpp  GaussianAOS.cpp  HistoAOS.cpp  MonoAOS.cpp  image-aos.cpp  imageaos.cpp  imgaos.cpp
common/: Bmp.cpp  common.cpp  copy.cpp  gaussian.cpp  parser.cpp  progargs.cpp
includes/: Bmp.h  BmpAOS.h  BmpSOA.h  HistoAOS.h  HistoSOA.h  MonoSOA.h  aos.h  common.h  soa.h
soa/: BmpSOA.cpp  GaussianSOA.cpp  GaussianSOA.h  HistoSOA.cpp  MonoSOA.cpp  image-soa.cpp  imagesoa.cpp  imgsoa.cpp
